# genice-cif

./: .gitignore  Makefile  Pipfile  README.md  RHO.zeo.gro  pyproject.toml  replacer.py  setup.py  temp_README.md
genice2_cif/: __init__.py
genice2_cif/lattices/: zeolite.py
genice_cif/: __init__.py
genice_cif/lattices/: zeolite.py
ref/: RHO.zeo.gro
