[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "genice2_cif/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["genice2_cif"]

[project]
dynamic = ["version"]
name = "genice2-cif"

[project.urls]
Homepage = "https://github.com/vitroid/genice-cif"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

# poetry self add poetry-version-plugin
[tool.poetry-version-plugin]
source = "init"

[tool.poetry]
name = "genice2-cif"
version = "0.0.0" # for GenIce2.2
description = "CIF reader plugin for GenIce2."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cif2ice = ">=0.3.0"
GenIce2 = "^2.2.5.2"
validators = "*"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.3"
toml = "^0.10.2"

[tool.poetry.plugins.genice2_lattice]
cif = "genice2_cif.lattices.cif"
zeolite = "genice2_zeolite.lattices.zeolite"

